ingress/Example-1/pods.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp

spec:
  minReadySeconds: 30  #minimum nece saniye araliqnan pod yaranmalidir
  selector:
    matchLabels:
      app: webapp
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5
