ingress/Example-1/services.yml
apiVersion: v1 
kind: Service 
metadata:
  name: fleetman-webapp
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    nodePort: 30080
  selector:
    app: webapp
#    release: "0-5"
